[package]
name = "cryptowatcherwasm"
version = "0.1.0"
authors = ["hosseind88 <hosseind88@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
url = "1.7.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
wasm-bindgen-futures = "0.4.24"
failure = { version = "0.1.8", features = [] }
js-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
